remove tooltip feature, buggy on mobile view due to overflow

--- a/src/styles/404.css
+++ b/src/styles/404.css
@@ -10,8 +10,8 @@ a {
   align-items: center;
 }
 
-.message {
+/* .message {
   background-color: var(--bg-secondary);
   padding: 16px;
   border-radius: 4px;
-}
+} */
